# TreeAlgorithms

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml
docs/: index.md  reference.md
examples/: CMakeLists.txt  polish-notation.cpp
reference/: index.html
search/: search_index.json
src/jv/: tree-algorithms.hpp
tests/: CMakeLists.txt  tree-algorithms.cpp
